Updated circle yml file 4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
-Java Gradle CircleCI 2.0 configuration file
+# Java Gradle CircleCI 2.0 configuration file
 #
 # Check https://circleci.com/docs/2.0/language-java/ for more details
-#  Author :Amit DHAR
 #
 version: 2
 jobs:
@@ -41,3 +40,6 @@ jobs:
         
       # run tests!
       - run: gradle test
+
+
+
