Updated config yml file 6

--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,8 @@ general:
 
 machine:
     environment:
-        ANDROID_HOME: /usr/local/android-sdk-linux
+        - sudo ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+
 
 dependencies:
     override:
