--- a/circle.yml
+++ b/circle.yml
@@ -13,6 +13,7 @@ machine:
 
 dependencies:
     override:
+        - chmod +x gradlew
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-27.0.3,android-27,extra-google-m2repository,extra-google-google_play_services,extra-android-support
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
 
