--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,9 @@ jobs:
       - run:
           name: Run Tests
           command: ./gradlew lint test
+     - run:
+       name: Run Tests Instrument
+       command: ./gradlew test --tests "com.mytaxi.android_demo.FirstTest.java"
       - store_artifacts:
           path: app/build/reports
           destination: reports
