--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,9 @@ jobs:
           command: ./gradlew lint test
      - run:
        name: Run Tests Instrument
-       command: ./gradlew test --tests "com.mytaxi.android_demo.FirstTest.java"
+       command: ./gradlew app:FirstTest -P android.testInstrumentationRunnerArguments.class=com.mytaxi.android_demo.FirstTest#testLoginSearch
+
+
       - store_artifacts:
           path: app/build/reports
           destination: reports
