--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,9 @@ jobs:
       - run:
           name: Run Tests
           command: ./gradlew lint test
+      - run:
+        name: Run Tests Incremantal
+        command: ./gradlew clean test
       - store_artifacts:
           path: app/build/reports
           destination: reports
