--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
             adb shell input keyevent 82
       - run:
           name: Run EspressoTests
-          command: ./gradlew connectedDemoDebugAndroidTest
+          command: ./gradlew FirstTest
       - store_artifacts:
           path: app/build/reports
           destination: reports
