--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - save_cache:
           paths:
             - ~/.gradle
-          key:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Setup emulator
           command: sdkmanager "system-images;android-16;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-16;default;armeabi-v7a"
@@ -37,9 +37,7 @@ jobs:
             # unlock the emulator screen
             sleep 30
             adb shell input keyevent 82
-      - run:
-          name: Run EspressoTests
-          command: ./gradlew deviceAndroidTest
+
       - store_artifacts:
           path: app/build/reports
           destination: reports
