--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,11 @@ jobs:
             # unlock the emulator screen
             sleep 30
             adb shell input keyevent 82
+      - run:
+            name: Run Instrumented Tests
+            command: ./gradlew connectedAndroidTest
+            
+            
       - store_artifacts:
           path: app/build/reports
           destination: reports
