--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,69 +1,52 @@
-aliases:
-# Cache Management
-  - &restore-cache-gradle
-    keys:
-      - v1-gradle-{{ arch }}-{{ .Branch }}-{{ checksum "build.gradle" }}-{{ checksum "gradle.properties" }}
-      # Fallback in case checksum fails
-      - v1-gradle-{{ arch }}-{{ .Branch }}-{{ checksum "build.gradle" }}-
-      - v1-gradle-{{ arch }}-{{ .Branch }}-
-      # Fallback in case this is a first-time run on a fork
-      - v1-gradle-{{ arch }}-master-
-  - &save-cache-gradle
-    paths:
-      - ~/.gradle
-    key: v1-gradle-{{ arch }}-{{ .Branch }}-{{ checksum "build.gradle" }}-{{ checksum "gradle.properties" }}
-
 version: 2
 jobs:
   build:
-    working_directory: ~/fresco
+    working_directory: ~/code
     docker:
-      - image: circleci/android:api-27-alpha
+      # Android the primary container
+      - image: circleci/android:api-26-alpha
+    environment:
+      JVM_OPTS: -Xmx3200m
     steps:
       - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
-          name: Setup NDK
-          command: |
-            wget --quiet https://dl.google.com/android/repository/android-ndk-r17b-linux-x86_64.zip
-            unzip -q android-ndk-r17b-linux-x86_64.zip -d /home/circleci
-            echo "ndk.dir=/home/circleci/android-ndk-r17b" >> /home/circleci/fresco/local.properties
+         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
+         command: sudo chmod +x ./gradlew
+
       - run:
-          name: "NDK Fix: https://github.com/android-ndk/ndk/issues/188"
-          command: sudo apt-get install file
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+         name: Run UnitTest
+         command: ./gradlew testDebugUnitTest
+
       - run:
           name: Setup emulator
-          command: |
-            sdkmanager "system-images;android-19;default;armeabi-v7a"
-            echo "no" | avdmanager create avd -n test -k "system-images;android-19;default;armeabi-v7a"
+          command: sdkmanager "system-images;android-24;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-16;default;armeabi-v7a"
       - run:
           name: Launch emulator
-          command: emulator -avd test -no-audio -no-window
+          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
           background: true
-       - run:
+      - run:
           name: Wait emulator
           command: |
-                 # wait for it to have booted
-                 circle-android wait-for-boot
-                 # unlock the emulator screen
-                 sleep 30
-                 adb shell input keyevent 82
+            # wait for it to have booted
+            circle-android wait-for-boot
+            # unlock the emulator screen
+            sleep 30
+            adb shell input keyevent 82
       - run:
-          name: Remove lock screen
-          command: adb shell input keyevent 82
-      - restore-cache: *restore-cache-gradle
-      - run:
-          name: Run Tests
-          command: ./gradlew test assembleDebug -PdisablePreDex
-      - save-cache: *save-cache-gradle
-      - run:
-          name: Run Instrumentation Tests
-          command: |
-            ./gradlew :samples:showcase:connectedInternalInstrumentationAndroidTest -PdisablePreDex
-      - run:
-          name: Copy Results
-          command: |
-            mkdir -p /home/circleci/test-results/junit
-            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} /home/circleci/test-results/junit \;
-            cp -r samples/showcase/build/reports/androidTests /home/circleci/test-results
-      - test-results-store:
-          path: /home/circleci/test-results
+          name: Run EspressoTests
+          command: ./gradlew connectedAndroidTest
+         
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
