--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,9 @@ jobs:
             # unlock the emulator screen
             sleep 60
             adb shell input keyevent 82
+            script: echo no | android create avd --force -n test -t android-22
+            --abi armeabi-v7a emulator -avd test -no-audio -no-window &
+            android-wait-for-emulator
             adb shell svc power stayon true
             adb shell settings put global window_animation_scale 0
             adb shell settings put global transition_animation_scale 0
